--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "electron-router-dom": "^1.0.5",
+    "react-router-dom": "^7.3.0",
     "vite-plugin-static-copy": "^2.3.0"
   },
   "devDependencies": {
