--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-clientes",
   "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "description": "Aplicativo para gerenciamento de clientes",
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
@@ -33,7 +33,9 @@
     "pouchdb": "^9.0.0",
     "pouchdb-browser": "^9.0.0",
     "react-router-dom": "^7.3.0",
-    "vite-plugin-static-copy": "^2.3.0"
+    "vite-plugin-static-copy": "^2.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
@@ -53,8 +55,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "postcss": "^8.5.3",
     "prettier": "^3.5.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
     "vite": "^6.1.0"
